--- a/views/user/register.jade
+++ b/views/user/register.jade
@@ -17,5 +17,5 @@ block content
                     .form-group
                         label Email
                         input.form-control(name='email')
-                    button(type='submit') 提交
+                    button.btn.btn-primary(type='submit') 提交
 
