--- a/views/content/item.jade
+++ b/views/content/item.jade
@@ -8,3 +8,4 @@ block content
                     p 标题：#{content.title}
                     p 内容：#{content.content}
                     p 日期：#{content.created}
+                    p 作者: #{content.author.name}
