--- a/views/user/list.jade
+++ b/views/user/list.jade
@@ -5,7 +5,7 @@ block content
         .row
             .col-md-12
                 .lists
-                    a.btn.btn-default(href='/user/add') 添加用户
+                    a.btn.btn-default(href='/user/register') 添加用户
                     table.table
                         thead
                             tr
