--- a/views/user/list.jade
+++ b/views/user/list.jade
@@ -13,6 +13,7 @@ block content
                                 th Email
                                 th Name
                                 th 创建日期
+                                th 操作
                         tbody
                             - each user in users
                                 tr
@@ -21,3 +22,7 @@ block content
                                     td #{user.email}
                                     td #{user.name}
                                     td #{user.created}
+                                    td 
+                                        a.btn.btn-default.btn-xs(href='/user/#{user.id}/edit') 编辑
+                                        |  
+                                        a.btn.btn-danger.btn-xs(href='/user/#{user.id}/del') 删除
