view -> server/view

--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -19,6 +19,10 @@ html
                             a(href='/content') 内容
                         li
                             a(href='/user') 用户
+                        li
+                            a(href='/category') 分类
+                        li
+                            a(href='/role') 角色
                     .navbar-right
                         if (user)
                             | #{user.name} 
