--- a/server/views/content/list.jade
+++ b/server/views/content/list.jade
@@ -5,7 +5,7 @@ block content
         .row
             .col-md-12
                 a.btn.btn-default(href='/content/add') 添加内容
-                table.table
+                table.table.table-striped
                     thead
                         tr
                             th 标题
