--- a/server/views/role/add.jade
+++ b/server/views/role/add.jade
@@ -6,10 +6,10 @@ block content
             .col-md-12
                 form(action='', method='post')
                     .form-group
-                        label 标题
+                        label 角色名
                         input.form-control(name='name')
                     .form-group
-                        label 操作
+                        label 动作
                         .row
                             .col-md-1
                                 input.form-control(name='actions')
