--- a/server/views/user/list.jade
+++ b/server/views/user/list.jade
@@ -5,8 +5,8 @@ block content
         .row
             .col-md-12
                 .lists
-                    a.btn.btn-default(href='/user/register') 添加用户
-                    table.table
+                    //a.btn.btn-default(href='/user/register') 添加用户
+                    table.table.table-striped
                         thead
                             tr
                                 th 用户名 
