--- a/server/views/user/login.jade
+++ b/server/views/user/login.jade
@@ -3,8 +3,9 @@ extends ../layout
 block content
     .container
         .row
-            .col-md-12
+            .login
                 form(action='', method='post')
+                    h2 登录
                     .form-group
                         label 用户名
                         input.form-control(name='username')
