--- a/server/views/content/item.jade
+++ b/server/views/content/item.jade
@@ -5,12 +5,12 @@ block content
         .row
             .col-md-12
                 .lists
-                    p 标题：#{content.title}
-                    p 日期：#{content.created}
-                    p 分类：
+                    h2 #{content.title}
+                    p 
                         if (content.category)
-                            | #{content.category.name}
-                    p 作者: 
+                            span.label.label-default #{content.category.name}
+                        | 
                         if (content.author)
-                            | #{content.author.name}
-                    p 内容：!{content.content}
+                            strong #{content.author.name}
+                        | 发布于：#{moment(content.created).format('LL')} 
+                    .content !{content.content}
