--- a/server/views/role/edit.jade
+++ b/server/views/role/edit.jade
@@ -9,7 +9,7 @@ block content
                         label 标题
                         input.form-control(name='name', value='#{role.name}')
                     .form-group
-                        label 操作
+                        label 动作
                         .row
                             - each action in role.actions
                                 .col-md-1
