--- a/server/views/user/item.jade
+++ b/server/views/user/item.jade
@@ -7,14 +7,13 @@ block content
                 .panel.panel-default
                     .panel-heading
                         | 用户信息
-                    .panel-body
-                        | 这里是单个用户的信息
-                    table.table
+                    table.table.table-bordered
                         thead
                             tr
                                 th ID
-                                th Name
-                                th Username
+                                th 名称
+                                th 用户名
+                                th 角色
                                 th Salt
                                 th Hashed_password
                         tbody
@@ -22,6 +21,12 @@ block content
                                 td #{user.id}
                                 td #{user.name}
                                 td #{user.username}
+                                td
+                                    if (user.roles)
+                                        - each role in user.roles
+                                            span.label.label-info
+                                                | #{role.name}
+                                            | 
                                 td #{user.salt}
                                 td #{user.hashed_password}
 
