--- a/server/views/user/register.jade
+++ b/server/views/user/register.jade
@@ -3,8 +3,9 @@ extends ../layout
 block content
     .container
         .row
-            .col-md-12
+            .register
                 form(action='', method='post')
+                    h2 注册
                     .form-group
                         label 用户名
                         input.form-control(name='username')
