--- a/server/views/category/edit.jade
+++ b/server/views/category/edit.jade
@@ -6,10 +6,10 @@ block content
             .col-md-12
                 form(action='', method='post')
                     .form-group
-                        label 标题
+                        label 名称
                         input.form-control(name='name', value='#{category.name}')
                     .form-group
-                        label 内容
+                        label 描述
                         textarea.form-control(name='description', rows='8') #{category.description}
                     button.btn.btn-primary(type='submit') 提交
 
