--- a/server/views/role/add.jade
+++ b/server/views/role/add.jade
@@ -10,15 +10,16 @@ block content
                         input.form-control(name='name')
                     .form-group
                         label 动作
-                        .row
-                            .col-md-1
-                                input.form-control(name='actions')
-                            .col-md-1
-                                input.form-control(name='actions')
-                            .col-md-1
-                                input.form-control(name='actions')
+                        input.form-control(name='actions', placeholder='逗号分割')
+                        //- .row
+                        //-     .col-md-1
+                        //-         input.form-control(name='actions')
+                        //-     .col-md-1
+                        //-         input.form-control(name='actions')
+                        //-     .col-md-1
+                        //-         input.form-control(name='actions')
                     .form-group
-                        label 内容
+                        label 描述
                         textarea.form-control(name='description', rows='8')
                     button.btn.btn-primary(type='submit') 提交
 
