--- a/server/views/role/edit.jade
+++ b/server/views/role/edit.jade
@@ -6,16 +6,17 @@ block content
             .col-md-12
                 form(action='', method='post')
                     .form-group
-                        label 标题
+                        label 名称
                         input.form-control(name='name', value='#{role.name}')
                     .form-group
                         label 动作
-                        .row
-                            - each action in role.actions
-                                .col-md-1
-                                    input.form-control(name='actions', value='#{action}')
+                        input.form-control(name='actions', placeholder='逗号分割', value='#{role.actions}')
+                        //- .row
+                        //-     - each action in role.actions
+                        //-         .col-md-1
+                        //-             input.form-control(name='actions', value='#{action}')
                     .form-group
-                        label 内容
+                        label 描述
                         textarea.form-control(name='description', rows='8') #{role.description}
                     button.btn.btn-primary(type='submit') 提交
 
