--- a/views/server/content/list.jade
+++ b/views/server/content/list.jade
@@ -4,7 +4,7 @@ block content
     .container
         .row
             .col-md-12
-                a.btn.btn-default(href='/content/add') 添加内容
+                a.btn.btn-default(href='#{adminDir}/content/add') 添加内容
                 table.table.table-striped
                     thead
                         tr
@@ -16,13 +16,13 @@ block content
                         - each content in contents
                             tr
                                 td
-                                    a(href='content/#{content.id}') #{content.title}
+                                    a(href='#{adminDir}/content/#{content.id}') #{content.title}
                                 td
                                     if (content.author)
                                         strong #{content.author.name}
                                 td
                                     | #{moment(content.created).format('LLL')}
                                 td
-                                    a.btn.btn-default.btn-xs(href='content/#{content.id}/edit') 编辑
+                                    a.btn.btn-default.btn-xs(href='#{adminDir}/content/#{content.id}/edit') 编辑
                                     | &nbsp;
-                                    a.btn.btn-danger.btn-xs(href='content/#{content.id}/del') 删除
+                                    a.btn.btn-danger.btn-xs(href='#{adminDir}/content/#{content.id}/del') 删除
