--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -15,10 +15,10 @@ html
                     ul.nav.navbar-nav
                         li(class=!path ? 'active' : '')
                                 a(href='/') 首页
-                        li(class=path === 'content' ? 'active' : '')
-                                a(href='/content') 内容
-                        li(class=path === 'category' ? 'active' : '')
-                                a(href='/category') 分类
+                        //- li(class=path === 'content' ? 'active' : '')
+                        //-         a(href='/content') 内容
+                        //- li(class=path === 'category' ? 'active' : '')
+                        //-         a(href='/category') 分类
                         
                     .navbar-right
                         if (user)
