--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -10,7 +10,7 @@ html
         .navbar.navbar-inverse.navbar-fixed-top
             .container
                 .navbar-header
-                    a.navbar-brand(href='/') Hey
+                    a.navbar-brand(href='/') CMS
                 .collapse.navbar-collapse
                     ul.nav.navbar-nav
                         li(class=!path ? 'active' : '')
