--- a/views/app/index.jade
+++ b/views/app/index.jade
@@ -5,7 +5,11 @@ block content
         each content in contents
             h2 #{content.title}
             p
-                | #{content.author.name} 发布于 #{moment(content.created).format('LLL')}
+                if (content.author)
+                    strong
+                        | #{content.author.name} 
+                | 发布于 
+                | #{moment(content.created).format('LLL')}
             .content
                 | #{content.content}
 block foot-js
