--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -10,7 +10,7 @@ html
         .navbar.navbar-inverse.navbar-fixed-top
             .container
                 .navbar-header
-                    a.navbar-brand(href='#{adminDir}/') Hey
+                    a.navbar-brand(href='#{adminDir}/') 管理后台
                 .collapse.navbar-collapse
                     ul.nav.navbar-nav
                         li(class=!path ? 'active' : '')
