--- a/views/server/content/item.jade
+++ b/views/server/content/item.jade
@@ -14,4 +14,5 @@ block content
                             strong #{content.author.name}
                         | 发布于：#{moment(content.created).format('LL')} 
                         | 访问量：#{content.visits}
-                    .content !{content.content}
+                    .content 
+                        | !{content.content}
