--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -11,8 +11,9 @@ block content
                     .form-group
                         label 分类
                         select.form-control(name='category')
+                            option(value='') 请选择
                             - each category in categorys
-                                if(category._id == content.category)
+                                if ((category._id + '') === (content.category + ''))
                                     option(value='#{category._id}', selected)
                                         | #{category.name}
                                 else
